Fix compilation issues due to new tuweni API
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>